Prevent list items from overlapping floated content

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -156,6 +156,16 @@ ul ul{
   }
 }
 
+article{
+  ol, ul{
+    margin-left: 3px;
+    display: table;
+  }
+  li{
+    margin-left: 1rem;
+    text-indent: 0rem;
+  }
+}
 .large-text{
   font-size: $large-font-base;
   font-weight: 600;
